---
config:
  theme: default
  look: handDrawn
---
erDiagram
    direction TB

    BoardGame {
        string name
        string description
        string designer
        int declaredMinimalPlayerCount
        int declaredMaximumPlayerCount
        int declaredMinimalAge
    }
    BoardGame }o--o{ Category : "belongs to"
    BoardGame ||--o{ Rating : "receives"
    BoardGame ||--o{ GameRelease : "printed in"
    BoardGame }o--o{ Mechanic : "uses"

    GameRelease {
      date releaseDate
      string language
    }
    GameRelease }o--|| Publisher : "published by"

    Publisher {
      string name
      string websiteUrl
      string description
    }

    Category {
        string name
    }
    Category:::dictionaryTable

    Mechanic {
      string name
    }
    Mechanic:::dictionaryTable

    Rating {
        int enjoyment
        int minimalPlayerCount
        int maximumPlayerCount
        int minimalAge
        int complexity
        timestamp date
    }

    User {
        string username
        string email
        boolean isAdmin
        binary passwordHash
    }
    User ||--o{ Rating : "gives"
    User ||--o{ Review : "writes"
    User }o--o{ Collection : "owns"

    Review {
        string reviewText
        timestamp date
    }
    Review ||--o{ BoardGame : "is reviewed in"

    Collection {
      string name
    }
    Collection }o--o{ GameRelease : "includes"

    Play {
      date playDate
      int playerCount
      int durationInMinutes
      string note
    }
    Play }o--|| BoardGame : "played"
    Play }o--|{ User : "played by"
    Play }o--o| User : "winner"

    GameWish {
      string note
      enum wantLevel
    }
    GameWish }o--|| BoardGame : "is wished for"
    GameWish }o--|| User : "is wished for by"

    classDef dictionaryTable :,stroke-width:1px, stroke-dasharray:none, stroke:#374D7C, fill:#E2EBFF, color:#374D7C
